# ambit

./: .gitignore  README.md  pyproject.toml
docs/concepts/: anisotropy-and-resolution.md
docs/design/embedding-occupancy-study/: README.md  _embed.js  index.html
docs/guide/: interpreting-the-report.md
skills/: README.md
skills/ambit-architecture/: SKILL.md
skills/ambit-cli/: SKILL.md
skills/ambit-concepts/: SKILL.md
skills/ambit-development/: SKILL.md
skills/ambit-figures/: SKILL.md
skills/ambit-overview/: SKILL.md
src/ambit/: __init__.py  accel.py  cli.py  cluster.py  config.py  embed.py  ingest.py  knn.py  metrics.py  pipeline.py  project.py  render.py  scan.py  source.py  types.py
src/ambit/assets/: picker.js  theme.css
src/ambit/figures/: __init__.py  cmp_diff.py  cmp_qq.py  cov_hull.py  cov_sparsity.py  cov_void.py  d3_live.py  d3_mesh.py  d3_mesh_live.py  d3_scatter.py  d3_shell.py  d3_trip.py  d3_voxel.py  den_contour.py  den_hexbin.py  den_prom.py  res_cumvar.py  res_iso.py  res_margin.py  res_wb.py  top_bridge.py  top_knn.py
