[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ambit"
version = "0.0.1"
description = "Visualize how a dataset occupies an embedding space — density, coverage, and resolution."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
]

# Tiered extras: the core (numpy) ingests .npy/.npz and runs native-space
# diagnostics. Heavier capabilities are opt-in so a minimal install stays light.
[project.optional-dependencies]
io = ["pandas>=2.0", "pyarrow>=12"]          # parquet / jsonl / csv with a vector column
reduce = ["scikit-learn>=1.3", "scipy>=1.10"] # PCA + kNN graph + projections
umap = ["umap-learn>=0.5"]                    # optional non-linear projection
ann = ["pynndescent>=0.5"]                    # approximate kNN for scale
gpu = ["torch>=2.0"]                          # CUDA/MPS device backend (accel.py)
faiss = ["faiss-gpu"]                         # GPU kNN for very large reservoirs (AMBIT_FAISS=1)
model = ["sentence-transformers>=2.2"]        # optional: embed raw items on the fly
all = ["pandas>=2.0", "pyarrow>=12", "scikit-learn>=1.3", "scipy>=1.10", "umap-learn>=0.5", "pynndescent>=0.5"]

[project.scripts]
ambit = "ambit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ambit"]
